# neo

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO_MERGE.txt
mp/src/: CMakeLists.txt  CMakePresets.json
mp/src/cmake/: FindBitmap.cmake  FindChoreoObjects.cmake  FindDMXLoader.cmake  FindMatSysControls.cmake  FindMathlib.cmake  FindParticles.cmake  FindSteamAPI.cmake  FindTier0.cmake  FindTier1.cmake  FindTier2.cmake  FindTier3.cmake  FindVGUIControls.cmake  FindVSTDLib.cmake  FindVTF.cmake  build_info.cmake  git_hash.cmake  packaging.cmake  utils.cmake
mp/src/devtools/: makefile_base_posix.mak
mp/src/lib/: CMakeLists.txt
mp/src/mathlib/: CMakeLists.txt  sseconst.cpp
mp/src/public/: const.h  datamap.h  model_types.h  studio.cpp
mp/src/vaudio_minimp3/: CMakeLists.txt
src/: CMakeLists.txt  CMakePresets.json
src/cmake/: FindAppFramework.cmake  FindBitmap.cmake  FindChoreoObjects.cmake  FindLibZ.cmake  FindMatSysControls.cmake  FindParticles.cmake  FindSteamAPI.cmake  FindTier0.cmake  FindTier1.cmake  FindTier2.cmake  FindTier3.cmake  FindVGUIControls.cmake  FindVSTDLib.cmake  FindVTF.cmake  build_info.cmake  gameinfo_engine_bundle.txt  packaging.cmake  utils.cmake
src/common/neo/: bit_cast.h  narrow_cast.h  test_bit_cast.h
src/enc_temp_folder/8a3df0e64b358f7ee8a2b6ad81f5812a/: game_sounds_weapons.txt
src/fgdlib/: CMakeLists.txt  gamedata.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp
src/game/client/: CMakeLists.txt  ViewConeImage.cpp  c_ai_basenpc.cpp  c_ai_basenpc.h  c_baseanimating.cpp  c_baseanimating.h  c_baseanimatingoverlay.cpp  c_basecombatcharacter.cpp  c_basecombatcharacter.h  c_basecombatweapon.cpp  c_baseentity.cpp  c_baseentity.h  c_baseplayer.cpp  c_baseplayer.h  c_basetempentity.h  c_baseviewmodel.cpp  c_buttons.cpp  c_buttons.h  c_effects.cpp  c_entitydissolve.cpp  c_env_projectedtexture.cpp  c_fire_smoke.cpp  c_func_breakablesurf.cpp  c_func_dust.cpp  c_func_dust.h  c_impact_effects.cpp  c_lightglow.cpp  c_particle_smokegrenade.cpp  c_pixel_visibility.cpp  c_plasma.cpp  c_playerresource.cpp  c_playerresource.h  c_point_commentary_node.cpp  c_point_worldtext.cpp  c_prop_vehicle.cpp  c_rope.cpp  c_sceneentity.cpp  c_shadowcontrol.cpp  c_smoke_trail.cpp  c_soundscape.cpp  (+106 more)
src/game/server/: AI_ResponseSystem.cpp  BaseAnimatingOverlay.cpp  CMakeLists.txt  CommentarySystem.cpp  EventLog.cpp  ServerNetworkProperty.cpp  ServerNetworkProperty.h  SkyCamera.cpp  SkyCamera.h  TemplateEntities.cpp  ai_basenpc.cpp  ai_basenpc.h  ai_basenpc_schedule.cpp  ai_behavior_assault.cpp  ai_behavior_follow.cpp  ai_behavior_lead.cpp  ai_behavior_lead.h  ai_behavior_standoff.cpp  ai_blended_movement.h  ai_hint.cpp  ai_localnavigator.cpp  ai_memory.cpp  ai_memory.h  ai_motor.cpp  ai_movetypes.h  ai_navigator.cpp  ai_network.h  ai_networkmanager.cpp  ai_planesolver.cpp  ai_playerally.cpp  ai_playerally.h  ai_schedule.cpp  ai_scriptconditions.cpp  ai_speech.cpp  ai_speech.h  ai_tacticalservices.cpp  ai_trackpather.cpp  ai_waypoint.cpp  ai_waypoint.h  baseanimating.cpp  (+81 more)
src/game/shared/: GameEventListener.h  GameStats.cpp  SoundEmitterSystem.cpp  achievementmgr.cpp  achievementmgr.h  activitylist.cpp  ai_activity.h  ammodef.cpp  base_playeranimstate.cpp  baseachievement.cpp  baseachievement.h  basecombatweapon_shared.cpp  basecombatweapon_shared.h  baseentity_shared.cpp  basegrenade_shared.cpp  baseplayer_shared.cpp  baseplayer_shared.h  baseviewmodel_shared.cpp  baseviewmodel_shared.h  death_pose.h  decals.h  effect_dispatch_data.cpp  ehandle.h  eventlist.cpp  gamemovement.cpp  gamemovement.h  gamerules.cpp  gamerules_register.cpp  gamevars_shared.cpp  igamesystem.cpp  mapentities_shared.cpp  math_finite_fix.cpp  movevars_shared.cpp  multiplay_gamerules.cpp  particle_parse.cpp  particlesystemquery.cpp  physics_main_shared.cpp  physics_saverestore.cpp  physics_shared.cpp  playernet_vars.h  (+21 more)
src/gamedata/sdkhooks.games/: game.neo.txt.in
src/gamedata/sdktools.games/: game.neo.txt.in
src/launcher_main/: CMakeLists.txt  launcher_main_mod_hl2mp.rc  launcher_main_mod_neo.rc  launcher_main_mod_tf.rc  main.cpp
src/lib/: CMakeLists.txt
src/materialsystem/stdshaders/: BaseVSShader.cpp  CMakeLists.txt  Neo_MotionVision.cpp  Neo_NightVision.cpp  Neo_NightVision_Shader.cpp  Neo_TestShader.cpp  Neo_ThermalVision.cpp  Neo_colorblind.cpp  Neo_refract_dx9_helper.cpp  Water_vs20.fxc  buildmisylshaders.bat  buildneoshaders.bat  lightmappedgeneric_dx9.cpp  lightmappedgeneric_dx9_helper.cpp  lightmappedgeneric_dx9_helper.h  lightmappedgeneric_ps2_3_x.h  lightmappedgeneric_ps2x.fxc  neo_haloaddoutline_ps2x.fxc  neo_motion_model_dx9.cpp  neo_motion_model_ps20b.fxc  neo_motion_model_vs20.fxc  neo_motionvision_ps30.fxc  neo_nightvision_ps30.fxc  neo_texturehaloadd_ps2x.fxc  neo_thermal_model_dx9.cpp  neo_thermal_model_dx9_helper.cpp  neo_thermal_model_dx9_helper.h  neo_thermal_model_ps20b.fxc  neo_thermal_model_vs20.fxc  (+9 more)
src/mathlib/: CMakeLists.txt  almostequal.cpp  color_conversion.cpp  imagequant.cpp  noisedata.h  polyhedron.cpp  powsse.cpp  quantize.cpp
src/public/: ScratchPadUtils.cpp  SoundParametersInternal.cpp  UtlCachedFileData.h  bitvec.h  bone_setup.cpp  bone_setup.h  bspflags.h  builddisp.cpp  cdll_int.h  chunkfile.cpp  const.h  datamap.h  disp_tesselate.h  dt_common.h  dt_recv.h  dt_send.cpp  dt_send.h  dt_utlvector_recv.cpp  dt_utlvector_send.cpp  edict.h  filesystem.h  filesystem_init.cpp  iclientrenderable.h  igameevents.h  igameresources.h  iservernetworkable.h  ispatialpartition.h  minmax.h  model_types.h  networkvar.h  saverestoretypes.h  scratchpad3d.cpp  sentence.cpp  sentence.h  server_class.h  soundflags.h  studio.cpp  studio.h  vcollide_parse.h  vphysics_interface.h  (+1 more)
src/raytrace/: CMakeLists.txt  raytrace.cpp
src/tests/: CMakeLists.txt  test_neo_crosshair.cpp  test_neo_serial.cpp  test_util.h
src/tier1/: CMakeLists.txt  KeyValues.cpp  checksum_sha1.cpp  interface.cpp  kvpacker.cpp  snappy-stubs-internal.h  snappy.cpp  strtools.cpp  utlstring.cpp  utlsymbol.cpp
src/utils/: CMakeLists.txt
(+1572 files in other folders)
